# xstatic-jasmine

./: .gitignore  .gitreview  LICENSE  MANIFEST.in  README.txt  setup.cfg  setup.py  tox.ini
xstatic/pkg/jasmine/: __init__.py
