# This config file has been created by
#    <horizon home>/tools/make_xstatic_setup_cfg.py

[metadata]
name = XStatic-Jasmine
summary = Jasmine 2.2.0 (XStatic packaging standard)
description-file = README.txt
author = Radomir Dopieralski
author-email = openstack@sheep.art.pl
home-page = http://jasmine.github.io/

[files]
packages = xstatic
namespace_packages =
    xstatic
    xstatic.pkg

