[metadata]
name = XStatic-Jasmine
description = Jasmine 2.4.1 (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = http://jasmine.github.io/
keywords = jasmine xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
